Fix top-bottom indexing of elements so they aren't all behind the bottom colour of html

--- a/css/styles.css
+++ b/css/styles.css
@@ -350,6 +350,7 @@ footer {
 	mix-blend-mode: exclusion;
 	background: rgba(255,255,255,0.05);
 	transition: background-color 0.25s ease-in-out;
+	z-index: 2;
 }
 
 .style-herocontent:hover a {
@@ -367,6 +368,7 @@ footer {
 	bottom: 0;
 	background-image: linear-gradient(180deg, rgba(0,0,0,0.00), rgba(0,137,199,0.44));
 	border-bottom: 2px solid #00A0FF;
+	z-index: 3;
 }
 
 #slideshow > div, #slideshow2 > div, #slideshow3 > div, #slideshow4 > div { 
@@ -374,7 +376,7 @@ footer {
 	width: 100%;
 	height: 100%;
   	background-size: cover;
-	z-index: -1;
+	z-index: 1;
 }
 
 #slideshow > div > img, #slideshow2 > div > img, #slideshow3 > div > img, #slideshow4 > div > img {
